CR-2002-09-25-0  Testsuite  error when comparing host architectures and
                            detecting duplicate compile hosts
                 Bugfix:    

CR-2002-09-24-1  Testsuite  Testsuite enhancement to test final packages
                 Enhancem.
                 IZ:        #369

CR-2002-09-24-0  Bugfix:    using SGE_STRUCT_STAT macro instead of
                            "struct stat". Reason: compile error for
                            SOLARIS86

CR-2002-09-23-3  Bugfix:    2 sentences need to be i18ned in master 
                 Bugtraq:   #4746079

JG-2002-09-23-0  Enhancem.  Created a gdi library interface (sge_mirror) 
                            for the mirroring of qmaster lists.
                 IZ:        #351           

CR-2002-09-23-0  Bugfix:    infotext doesn't support the reorder of conversion
                            specifications (merge)
                 Bugtraq:   #4739811
                            Bug not fixed for ALPHA, ALPHA5, ALINUX architecture

CR-2002-09-20-1  Bugfix:    infotext doesn't support the reorder of conversion
                            specifications (merge)
                 Bugtraq:   #4739811

SD-2002-09-19-0  Bugfix:    Fixed restart_command for checkpoint jobs
                 IZ:        #383
                 Changed:   sge_shepherd

JG-2002-09-17-1  Bugfix:    qsh jobs without or with local DISPLAY variable
                            set have to be rejected.
                 IZ:        #342
                 Bugtraq:   #4744523
                 Changed:   sge_qmaster, sge_execd, qsh, submit.1

JG-2002-09-17-0  Bugfix:    If a task of a tightly integrated job died through 
                            a signal (e.g. SIGXCPU), the job was not terminated
                            and the signalling information not visible in the 
                            accounting record.
                 Bugtraq:   #4747829
                 IZ:        #379
