@@ -1,3 +1,9 @@
+EB-2002-09-25-0  Bugfix:    qconf gets commd timeout
+                 IZ:        #308
+                 Review:    AH
+                 Changed:   qconf
+
+
 CR-2002-09-25-0  Testsuite  error when comparing host architectures and
                             detecting duplicate compile hosts
                  Bugfix:    
